welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:2: error: not found: value cand
  if (tea>=5 && cand>=10 || tea>=10 && candy>=5) {
                ^teaParty:6: error: type mismatch;
 found   : Boolean(false)
 required: Int
  } else return false
                ^